--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+<style>
+body {
+  center: 200px;
+  background: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg4snD5cre3cnD7mNqcZfM_10L1uc4Xu40hvXYUv2mQicwl42nc4kZpJB5gh9ni2z7RBAcBgYVT34LiZSkQITsZUyFH7NWdGVpn0rEYRYUeg2S-4upUDW_HFTrhAEjs2z07KyM6FoOzjg49mO79HMwB6tv2Ac0fPPoxkirCm78NDglwj56eatoLp9FPug/s502/20220830_223918.gif") repeat top left;
+}
+
+.center_div {
+  border: 1px solid gray;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  background-color: #d0f0f6;
+  text-align: center;
+  padding: 8px;
+}
+</style>
+
 <h1 style="text-align: center;">&nbsp;<u>Live</u> <u>and</u> <u>Pre-recorder</u></h1><h4 style="margin-left: 40px; text-align: center;"><span style="color: #999999;"><i>NOTE-New classes will be Notify ass soon ass posible</i></span></h4><h4 style="margin-left: 40px; text-align: center;"><span style="color: #999999;"><i>If you have a class? then click the "JOIN NOW" button <br /></i></span></h4><h4 style="text-align: center;">NO LIVE CLASSES AT THIS MOMENT</h4><h4 style="text-align: center;"></h4><p>
 <meta1 content="width=device-width, initial-scale=1" name="viewport"></meta1>
 
