--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 }
 </style>
 
-<h1 style="text-align: center;">&nbsp;<u>Live</u> <u>and</u> <u>Pre-recorder</u></h1><h4 style="margin-left: 40px; text-align: center;"><span style="color: #999999;"><i>NOTE-New classes will be Notify ass soon ass posible</i></span></h4><h4 style="margin-left: 40px; text-align: center;"><span style="color: #999999;"><i>If you have a class? then click the "JOIN NOW" button <br /></i></span></h4><h4 style="text-align: center;">NO LIVE CLASSES AT THIS MOMENT</h4><h4 style="text-align: center;"></h4><p>
+<h1 style="text-align: center;">&nbsp;<span style="color: white;"><u>Live</u> <u>and</u> <u>Pre-recorder</u></span></h1><h4 style="margin-left: 40px; text-align: center;"><span style="color: #999999;"><i>NOTE-New classes will be Notify ass soon ass posible</i></span></h4><h4 style="margin-left: 40px; text-align: center;"><span style="color: #999999;"><i>If you have a class? then click the "JOIN NOW" button <br /></i></span></h4><h4 style="text-align: center;"><span style="color: white;">NO LIVE CLASSES AT THIS MOMENT</span></h4><h4 style="text-align: center;"></h4><p>
 <meta1 content="width=device-width, initial-scale=1" name="viewport"></meta1>
 
 <!--Add icon library-->
@@ -36,7 +36,7 @@ body {
 
   cursor: pointer;
 
-  font-size: 25px;
+  font-size: 35px;
   
 
 }
@@ -47,12 +47,18 @@ body {
 
   background-color: grey;
 
-  color: black;
+  color: white;
 
  
 
 }
-
+  
+}
+  <h4>
+  color:black;
+  <h4>
+}
+  
 </style>
 
 
@@ -69,4 +75,4 @@ body {
 
 <br /><br /></p><span><!--more--></span>
 
-<br /><b><i>CLICK HERE</i> TO SEE THE PREVIOUS CLASSES</b><br />
+<br /><span style="color: white;"><b><i>CLICK HERE</i> TO SEE THE PREVIOUS CLASSES</b></span><br />
