--- a/index.html
+++ b/index.html
@@ -65,14 +65,12 @@ body {
 
 <body>
 
-<h4>THIS BUTTON WILL APEAR AS GREEN IN COLOR ON IF CLASS IS IN LINE</h4>
-
+<span style="color: white;"><i><b>THIS BUTTON WILL TURN INTO GREEN IN COLOR WHEN YOU'VE CLASS</b></i></span>
+  <br />
 <a download="" href="#">
 
 <button class="btn"> JOIN NOW </button>
 
-</a></body>
-
-<br /><br /></p><span><!--more--></span>
+</a></body> <br /><br /></p><span><!--more--></span>
 
 <br /><span style="color: white;"><b><i>CLICK HERE</i> TO SEE THE PREVIOUS CLASSES</b></span><br />
