--- a/index.html
+++ b/index.html
@@ -74,3 +74,6 @@ body {
 </a></body> <br /><br /></p><span><!--more--></span>
 
 <br /><span style="color: white;"><b><i>CLICK HERE</i> TO SEE THE PREVIOUS CLASSES</b></span><br />
+<a download="" href="#">
+
+<button class="btn"> OPEN THAT SECTION </button>
