--- a/index.html
+++ b/index.html
@@ -74,6 +74,49 @@ body {
 </a></body> <br /><br /></p><span><!--more--></span>
 
 <br /><span style="color: white;"><b><i>CLICK HERE</i> TO SEE THE PREVIOUS CLASSES</b></span><br />
+
+
+<link2 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"></link2>
+
+<style>
+
+.btn2 {
+
+  background-color: green;
+
+  border: none;
+
+  color: white;
+
+  padding: 12px 45px:
+
+  cursor: pointer;
+
+  font-size: 35px;
+  
+
+}
+
+/* Darker background on mouse-over */
+
+.btn2:hover {
+
+  background-color: grey;
+
+  color: white;
+
+ 
+
+}
+  
+}
+  <h4>
+  color:black;
+  <h4>
+}
+  
+</style>
+
 <a download="" href="#">
 
-<button class="btn"> OPEN THAT SECTION </button>
+<button class="btn2"> OPEN THAT SECTION </button>
