--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <style>
 body {
   center: 100px;
-  background: url("https://wallpaperaccess.com/full/2084619.jpg") repeat top left;
+  background: url("https://c4.wallpaperflare.com/wallpaper/792/35/779/8k-cgi-dark-background-spider-man-wallpaper-preview.jpg") repeat top left;
 }
 
 .center_div {
