--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body {
 }
 </style>
 
-<h1 style="text-align: center;">&nbsp;<span style="color: white;"><u>Live</u> <u>and</u> <u>Pre-recorder</u></span></h1><h4 style="margin-left: 40px; text-align: center;"><span style="color: #999999;"><i>NOTE-New classes will be Notify ass soon ass posible</i></span></h4><h4 style="margin-left: 40px; text-align: center;"><span style="color: #999999;"><i>If you have a class? then click the "JOIN NOW" button <br /></i></span></h4><h4 style="text-align: center;"><span style="color: white;">NO LIVE CLASSES AT THIS MOMENT</span></h4><h4 style="text-align: center;"></h4><p>
+<h1 style="text-align: center;">&nbsp;<span style="color: white;"><u>Live</u> <u>and</u> <u>Pre-recorder</u></span></h1><h4 dir="rtl" style="margin-right: 40px; text-align: center;"><span style="color: #999999;"><i>NOTE-New classes will be Notify ass soon ass posible</i></span></h4><h4 dir="rtl" style="margin-right: 40px; text-align: center;"><span style="color: #999999;"><i>If you have a class? then click the "JOIN NOW" button <br /></i></span></h4><h4 dir="rtl" style="text-align: center;"><span style="color: white;">NO LIVE CLASSES AT THIS MOMENT</span></h4><h4 dir="rtl" style="text-align: center;"></h4><p dir="rtl" style="text-align: right;">
 <meta1 content="width=device-width, initial-scale=1" name="viewport"></meta1>
 
 <!--Add icon library-->
@@ -120,3 +120,4 @@ body {
 <a download="" href="#">
 
 <button class="btn2"> OPEN THAT SECTION </button>
+</a>
