--- a/index.html
+++ b/index.html
@@ -1,123 +1,2 @@
-<style>
-body {
-  center: 100px;
-  background: url("https://wallpaperaccess.com/full/2084619.jpg") repeat top left;
-}
+<h1 style="text-align: center;"><span style="font-size: x-large;"><b>Select an option</b></span></h1><h3 style="text-align: center;"><span style="color: black;"><a href="selectclass.html">CHECK PLUS ONE CLASS</a></span></h3><h3 style="text-align: center;">CHECK PLUS TWO CLASS</h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;">All copyrighted to Candle-in.blogspot.com<br /></h3>
 
-.center_div {
-  border: 100px solid gray;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  background-color: #d0f0f6;
-  text-align: center;
-  padding: 8px;
-}
-</style>
-
-<h1 style="text-align: center;">&nbsp;<span style="color: white;"><u>Live</u> <u>and</u> <u>Pre-recorder</u></span></h1><h4 dir="rtl" style="margin-right: 40px; text-align: center;"><span style="color: #999999;"><i>NOTE-New classes will be Notify ass soon ass posible</i></span></h4><h4 dir="rtl" style="margin-right: 40px; text-align: center;"><span style="color: #999999;"><i>If you have a class? then click the "JOIN NOW" button <br /></i></span></h4><h4 dir="rtl" style="text-align: center;"><span style="color: white;">NO LIVE CLASSES AT THIS MOMENT</span></h4><h4 dir="rtl" style="text-align: center;"></h4><p dir="rtl" style="text-align: right;">
-<meta1 content="width=device-width, initial-scale=1" name="viewport"></meta1>
-
-<!--Add icon library-->
-
-<link2 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"></link2>
-
-<style>
-
-.btn {
-
-  background-color: RED;
-
-  border: none;
-
-  color: white;
-
-  padding: 12px 45px:
-
-  cursor: pointer;
-
-  font-size: 35px;
-  
-
-}
-
-/* Darker background on mouse-over */
-
-.btn:hover {
-
-  background-color: grey;
-
-  color: white;
-
- 
-
-}
-  
-}
-  <h4>
-  color:black;
-  <h4>
-}
-  
-</style>
-
-
-
-<body>
-<br /><br /><br />
-<span style="color: white;"><i><b>THIS BUTTON WILL TURN INTO GREEN IN COLOR WHEN YOU'VE CLASS</b></i></span>
-  <br />
-<a download="" href="#">
-
-<button class="btn"> JOIN NOW </button>
-
-</a></body> <br /><br /></p><span><!--more--></span>
-
-<br /><span style="color: white;"><b><i>CLICK HERE</i> TO SEE THE PREVIOUS CLASSES</b></span><br />
-
-
-<link2 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"></link2>
-
-<style>
-
-.btn2 {
-
-  background-color: green;
-
-  border: none;
-
-  color: white;
-
-  padding: 12px 45px:
-
-  cursor: pointer;
-
-  font-size: 35px;
-  
-
-}
-
-/* Darker background on mouse-over */
-
-.btn2:hover {
-
-  background-color: grey;
-
-  color: white;
-
- 
-
-}
-  
-}
-  <h4>
-  color:black;
-  <h4>
-}
-  
-</style>
-
-<a download="" href="#">
-
-<button class="btn2"> OPEN THAT SECTION </button>
-</a>
