--- a/index.html
+++ b/index.html
@@ -1,2 +1,19 @@
-<h1 style="text-align: center;"><span style="font-size: x-large;"><b>Select an option</b></span></h1><h3 style="text-align: center;"><span style="color: black;"><a href="online_class.html">CHECK PLUS ONE CLASS</a></span></h3><h3 style="text-align: center;">CHECK PLUS TWO CLASS</h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;">All copyrighted to Candle-in.blogspot.com<br /></h3>
+<h1 style="text-align: center;"><span style="color: white;"><span style="font-size: x-large;"><b>Select an option</b></span></span></h1><h3 style="text-align: center;"><span style="color: white;"><span><a href="selectclass.html">CHECK PLUS ONE CLASS</a></span></span></h3><h3 style="text-align: center;"><span style="color: white;">CHECK PLUS TWO CLASS</span></h3><h3 style="text-align: center;"><span style="color: white;"><br /></span></h3><h3 style="text-align: center;"><span style="color: white;"><br /></span></h3><h3 style="text-align: center;"><span style="color: white;"><br /></span></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;">All copyrighted to Candle-in.blogspot.com<br /></h3>
 
+
+<style>
+body {
+  center: 100px;
+  background: url("https://wallpaperaccess.com/full/2084619.jpg") repeat top left;
+}
+
+.center_div {
+  border: 100px solid gray;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  background-color: #d0f0f6;
+  text-align: center;
+  padding: 8px;
+}
+</style>
