--- a/index.html
+++ b/index.html
@@ -1,4 +1,67 @@
-<h1 style="text-align: center;"><span style="color: white;"><span style="font-size: x-large;"><b>Select an option</b></span></span></h1><h3 style="text-align: center;"><span style="color: white;"><span><a href="selectclass.html">CHECK PLUS ONE CLASS</a></span></span></h3><h3 style="text-align: center;"><span style="color: white;">CHECK PLUS TWO CLASS</span></h3><h3 style="text-align: center;"><span style="color: white;"><br /></span></h3><h3 style="text-align: center;"><span style="color: white;"><br /></span></h3><h3 style="text-align: center;"><span style="color: white;"><br /></span></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;">All copyrighted to Candle-in.blogspot.com<br /></h3>
+<h1 style="text-align: center;"><span style="color: white;"><span style="font-size: x-large;"><b>Select an option</b></span>
+
+<html>
+<head>
+<style>
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.9);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+</style>
+</head>
+<body>
+
+<h2>Dropdown Menu</h2>
+<p>Move the mouse over the button to open the dropdown menu.</p>
+
+<div class="dropdown">
+  <button class="dropbtn">SELECT</button>
+  <div class="dropdown-content">
+  <a href="#">Plus-one</a>
+  <a href="#">Plus-two</a>
+  <a href="#">Under development</a>
+  </div>
+</div>
+
+
+</body>
+</html>
+
 
 
 <style>
