--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<h1 style="text-align: center;"><span style="color: white;"><span style="font-size: x-large;"><b>Select an option</b></span>
-
 <html>
 <head>
 <style>
@@ -46,13 +44,13 @@
 </head>
 <body>
 
-<h2>Dropdown Menu</h2>
-<p>Move the mouse over the button to open the dropdown menu.</p>
+<h2>Choose an Option</h2>
+<p>Select An Option By click on the Choose class button</p>
 
 <div class="dropdown">
-  <button class="dropbtn">SELECT</button>
+  <button class="dropbtn"><b>CHOOSE CLASS<b></button>
   <div class="dropdown-content">
-  <a href="#">Plus-one</a>
+  <a href="selectclass.html">Plus-one</a>
   <a href="#">Plus-two</a>
   <a href="#">Under development</a>
   </div>
