--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<h1 style="text-align: center;"><span style="color: white;"><span style="font-size: x-large;"><b></b></span></span>
+<h2 style="text-align: center;"><span style="color: white;"><span style="font-size: x-large;"><b></b></span></span></h2>
+
+<p style="text-align: center;"><span style="color: white;"><span style="font-size: x-large;"><b></b></span></span></p>
 
 <html>
 <head>
