--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<h2 style="text-align: center;"><span style="color: white;"><span style="font-size: x-large;"><b></b></span></span></h2>
-
-<p style="text-align: center;"><span style="color: white;"><span style="font-size: x-large;"><b></b></span></span></p>
-
+<h1 style="text-align: center;"><span style="color: white;"><span style="font-size: x-large;"><b></b></span></span></h1><h3 style="text-align: center;"><span style="color: white;"><span><a href="#"></a></span></span></h3><h3 style="text-align: center;"><span style="color: white;"></span></h3><h3 style="text-align: center;"><span style="color: white;"><br /></span></h3><h3 style="text-align: center;"><span style="color: white;"><br /></span></h3><h3 style="text-align: center;"><span style="color: white;"><br /></span></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3>
 <html>
 <head>
 <style>
