--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<h1 style="text-align: center;"><span style="color: white;"><span style="font-size: x-large;"><b></b></span></span></h1><h3 style="text-align: center;"><span style="color: white;"><span><a href="#"></a></span></span></h3><h3 style="text-align: center;"><span style="color: white;"></span></h3><h3 style="text-align: center;"><span style="color: white;"><br /></span></h3><h3 style="text-align: center;"><span style="color: white;"><br /></span></h3><h3 style="text-align: center;"><span style="color: white;"><br /></span></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3><h3 style="text-align: center;"><br /></h3>
+<h1 style="text-align: center;">Choose an Option</h1><h2 style="text-align: center;"><i>Select An Option By click on the Choose class button</i><span class="pl-kos"></span></h2>
+
+
 <html>
 <head>
 <style>
@@ -45,11 +47,9 @@
 </head>
 <body>
 
-<h2>Choose an Option</h2>
-<p>Select An Option By click on the Choose class button</p>
 
 <div class="dropdown">
-  <button class="dropbtn"><b>CHOOSE CLASS<b></button>
+  <button class="dropbtn"><b>CHOOSE CLASS<b></b></b></button>
   <div class="dropdown-content">
   <a href="selectclass.html">Plus-one</a>
   <a href="#">Plus-two</a>
