--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1 style="text-align: center;">Choose an Option</h1><h2 style="text-align: center;"><i>Select An Option By click on the Choose class button</i><span class="pl-kos"></span></h2>
+<h1 style="text-align: center;"><span style="color: white;">Choose an Option</span></h1><h2 style="text-align: center;"><span style="color: white;"><i>Select An Option By click on the Choose class button</i></span></h2>
 
 
 <html>
