--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="dropdown">
   <button class="dropbtn"><b>CHOOSE CLASS<b></b></b></button>
   <div class="dropdown-content">
-  <a href="selectclass.html">Plus-one</a>
+  <a href="online_class.html">Plus-one</a>
   <a href="#">Plus-two</a>
   <a href="#">Under development</a>
   </div>
