--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1 style="text-align: center;"><span style="color: white;">Choose an Option</span></h1><h2 style="text-align: center;"><span style="color: white;"><i>Select An Option By click on the Choose class button</i></span></h2>
+3rd<h1 style="text-align: center;"><span style="color: white;">Choose an Option</span></h1><h2 style="text-align: center;"><span style="color: white;"><i>Select An Option By click on the Choose class button</i></span></h2>
 
 
 <html>
@@ -51,7 +51,7 @@
 <div class="dropdown">
   <button class="dropbtn"><b>CHOOSE CLASS<b></b></b></button>
   <div class="dropdown-content">
-  <a href="online_class.html">Plus-one</a>
+  <a href="checking.html">Plus-one</a>
   <a href="#">Plus-two</a>
   <a href="#">Under development</a>
   </div>
