--- a/checking.html
+++ b/checking.html
@@ -20,7 +20,7 @@
 
    // seconds before download link becomes visible
 
-   var count = 6;
+   var count = 5;
 
    var countdown_element = document.getElementById("countdown");
 
@@ -73,3 +73,21 @@
       <p>CHECKING FOR CLASS. BE PATIENT.</p>
    </body>
 </html>
+
+
+<style>
+body {
+  center: 100px;
+  background: url("https://wallpaperaccess.com/full/2084619.jpg") repeat top left;
+}
+
+.center_div {
+  border: 100px solid gray;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  background-color: #d0f0f6;
+  text-align: center;
+  padding: 8px;
+}
+</style>
