--- a/checking.html
+++ b/checking.html
@@ -78,7 +78,7 @@
 <style>
 body {
   center: 100px;
-  background: url("https://wallpaperaccess.com/full/2084619.jpg") repeat top left;
+  background: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjf1ARijqiCxOJS9RepPC4AkXLik94hb0xsDZgUdSOiyKBno7j1qXSLA_XuwXWmUS7lX3dv1TlgZ3ebu9ODLPWbR0-vq4fmBXpe_RdHaw70IpmoOOEBlO3uXzf-E6XOy2cRJ5qeiETE9NQ8hYYeCCL8EZszx34Ww4wbuQm72PjYODlEL9ShB7CDrTygmg/s701/IMG-20220901-WA0028.jpg") repeat top left;
 }
 
 .center_div {
@@ -89,5 +89,3 @@ body {
   background-color: #d0f0f6;
   text-align: center;
   padding: 8px;
-}
-</style>
