--- a/index.html
+++ b/index.html
@@ -1,65 +1,51 @@
-3rd<h1 style="text-align: center;"><span style="color: white;">Choose an Option</span></h1><h2 style="text-align: center;"><span style="color: white;"><i>Select An Option By click on the Choose class button</i></span></h2>
 
+<h1 style="text-align: center;"><span style="color: white;">CHOOSE AN OPTION</span></h1><p><span style="color: #cccccc;"><i><b>NOTE- CHOOSING AN OPTION DOESN'T MEAN THAT YOUR CLASS IN LINE. IT NEED TO CHECK FOR ANY CLASSES THAT YOU HAVE</b></i></span><br /></p>
 
+<style>
+  body {
+    center: 100px;
+    background: url("https://i.pinimg.com/originals/be/a3/b6/bea3b69838d78f9462df8222561cae07.gif") repeat top left;
+  }
+
+  .center_div {
+    border: 100px solid gray;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    background-color: #d0f0f6;
+    text-align: center;
+    padding: 8px;
+  }
+</style>
+<!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
+.button {
+  background-color: blue; 
   border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 20px;
   cursor: pointer;
 }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.9);
-  z-index: 1;
-}
+.button3 {border-radius: 8px;}
 
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.dropdown:hover .dropbtn {
-  background-color: #3e8e41;
-}
 </style>
 </head>
 <body>
 
-
-<div class="dropdown">
-  <button class="dropbtn"><b>CHOOSE CLASS<b></b></b></button>
-  <div class="dropdown-content">
-  <a href="checking.html">Plus-one</a>
-  <a href="#">Plus-two</a>
-  <a href="#">Under development</a>
-  </div>
-</div>
+<a href="checking.html">
+<button class="button button3">CHECK PLUS ONE CLASS</button>
 
 
-</body>
-</html>
 
 
 
