--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <style>
 body {
   center: 100px;
-  background: url("https://wallpaperaccess.com/full/2084619.jpg") repeat top left;
+  background: url("https://i.pinimg.com/originals/be/a3/b6/bea3b69838d78f9462df8222561cae07.gif") repeat top left;
 }
 
 .center_div {
