--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 
-<h1 style="text-align: center;"><span style="color: white;">CHOOSE AN OPTION</span></h1><p><span style="color: #cccccc;"><i><b>NOTE- CHOOSING AN OPTION DOESN'T MEAN THAT YOUR CLASS IN LINE. IT NEED TO CHECK FOR ANY CLASSES THAT YOU HAVE</b></i></span><br /></p>
+<<h1 style="text-align: center;"><span style="color: white;">CHOOSE AN OPTION</span></h1><p><span style="color: #cccccc;"><i><b>NOTE- CHOOSING AN OPTION DOESN'T MEAN THAT YOUR CLASS IN LINE. IT NEED TO CHECK FOR ANY CLASSES THAT YOU HAVE</b></i></span><br /></p>
 
+
+ 
 <style>
-  body {
-    center: 100px;
-    background: url("https://i.pinimg.com/originals/be/a3/b6/bea3b69838d78f9462df8222561cae07.gif") repeat top left;
-  }
 
   .center_div {
     border: 100px solid gray;
@@ -42,26 +40,38 @@
 </head>
 <body>
 
-<a href="checking.html">
+<a href="selectclass.html">
 <button class="button button3">CHECK PLUS ONE CLASS</button>
 
-
-
-
-
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {
-  center: 100px;
-  background: url("https://i.pinimg.com/originals/be/a3/b6/bea3b69838d78f9462df8222561cae07.gif") repeat top left;
+body, html {
+  height: 100%;
+  margin: 0;
 }
 
-.center_div {
-  border: 100px solid gray;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  background-color: #d0f0f6;
-  text-align: center;
-  padding: 8px;
+.bg {
+  /* The image used */
+  background-image: url("https://thumbs.dreamstime.com/b/earth-d-illustration-space-day-night-globe-isolated-black-background-view-earth-d-illustration-space-day-131652504.jpg");
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 </style>
+</head>
+<body>
+
+<div class="bg"></div>
+
+
+
+</body>
+</html>
