--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-<<h1 style="text-align: center;"><span style="color: white;">CHOOSE AN OPTION</span></h1><p><span style="color: #cccccc;"><i><b>NOTE- CHOOSING AN OPTION DOESN'T MEAN THAT YOUR CLASS IN LINE. IT NEED TO CHECK FOR ANY CLASSES THAT YOU HAVE</b></i></span><br /></p>
+<h1 style="text-align: center;"><span style="color: white;">CHOOSE AN OPTION</span></h1><p><span style="color: #cccccc;"><i><b>NOTE- CHOOSING AN OPTION DOESN'T MEAN THAT YOUR CLASS IN LINE. IT NEED TO CHECK FOR ANY CLASSES THAT YOU HAVE</b></i></span><br /></p>
 
 
  
@@ -46,32 +45,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body, html {
-  height: 100%;
-  margin: 0;
-}
-
-.bg {
-  /* The image used */
-  background-image: url("https://thumbs.dreamstime.com/b/earth-d-illustration-space-day-night-globe-isolated-black-background-view-earth-d-illustration-space-day-131652504.jpg");
-
-  /* Full height */
-  height: 100%; 
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+body {
+  background-image: url("https://thumbs.dreamstime.com/b/earth-d-illustration-space-day-night-globe-isolated-black-background-view-earth-d-illustration-space-day-131652504.jpg");  
+}  
 </style>
 </head>
 <body>
 
-<div class="bg"></div>
+<h1>The background-image Property</h1>
 
-
+<p>
+This demo shows some different techiques on how to set a background image of a HTML element.
+</p>
 
 </body>
 </html>
