--- a/index.html
+++ b/index.html
@@ -47,17 +47,12 @@
 <head>
 <style>
 body {
-  background-image: url("https://thumbs.dreamstime.com/b/earth-d-illustration-space-day-night-globe-isolated-black-background-view-earth-d-illustration-space-day-131652504.jpg");  
+  background-image: url("https://i.pinimg.com/originals/b2/f1/17/b2f1177cea910d95dca3048224b419d6.gif");  
 }  
 </style>
 </head>
 <body>
 
-<h1>The background-image Property</h1>
-
-<p>
-This demo shows some different techiques on how to set a background image of a HTML element.
-</p>
 
 </body>
 </html>
