--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 
-<a href="selectclass.html">
+<a href="checking.html">
 <button class="button button3">CHECK PLUS ONE CLASS</button>
 
 <!DOCTYPE html>
@@ -47,7 +47,7 @@
 <head>
 <style>
 body {
-  background-image: url("https://i.pinimg.com/originals/b2/f1/17/b2f1177cea910d95dca3048224b419d6.gif");  
+  background-image: url("https://i.pinimg.com/originals/c6/01/71/c601714b18ee6c358ec79c6cfcce8533.gif");  
 }  
 </style>
 </head>
