--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <head>
 <style>
 body {
-  background-image: url("https://i.pinimg.com/originals/c6/01/71/c601714b18ee6c358ec79c6cfcce8533.gif");  
+  background-image: url("https://thumbs.gfycat.com/BouncyKeenAltiplanochinchillamouse-max-1mb.gif");  
 }  
 </style>
 </head>
