--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <head>
 <style>
 body {
-  background-image: url("https://thumbs.gfycat.com/BouncyKeenAltiplanochinchillamouse-max-1mb.gif");  
+  background-image: url("https://i.gifer.com/50IA.gif");  
 }  
 </style>
 </head>
