--- a/checking.html
+++ b/checking.html
@@ -75,17 +75,22 @@
 </html>
 
 
+<body>
+
+<a href="checking.html">
+<button class="button button3">CHECK PLUS ONE CLASS</button>
+
+<!DOCTYPE html>
+<html>
+<head>
 <style>
 body {
-  center: 100px;
-  background: url("https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjf1ARijqiCxOJS9RepPC4AkXLik94hb0xsDZgUdSOiyKBno7j1qXSLA_XuwXWmUS7lX3dv1TlgZ3ebu9ODLPWbR0-vq4fmBXpe_RdHaw70IpmoOOEBlO3uXzf-E6XOy2cRJ5qeiETE9NQ8hYYeCCL8EZszx34Ww4wbuQm72PjYODlEL9ShB7CDrTygmg/s701/IMG-20220901-WA0028.jpg") repeat top left;
-}
+  background-image: url("https://64.media.tumblr.com/bff245925ee537755c3c3b1f9a3f2a7f/tumblr_oq9smvbNLz1vsjcxvo1_540.gif");  
+}  
+</style>
+</head>
+<body>
 
-.center_div {
-  border: 100px solid gray;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  background-color: #d0f0f6;
-  text-align: center;
-  padding: 8px;
+
+</body>
+</html>
