--- a/online_class.html
+++ b/online_class.html
@@ -1,19 +1,22 @@
+<body>
+
+<a href="checking.html">
+<button class="button button3">CHECK PLUS ONE CLASS</button>
+
+<!DOCTYPE html>
+<html>
+<head>
 <style>
 body {
-  center: 100px;
-  background: url("https://wallpaperaccess.com/full/2084619.jpg") repeat top left;
-}
-
-.center_div {
-  border: 100px solid gray;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  background-color: #d0f0f6;
-  text-align: center;
-  padding: 8px;
-}
+  background-image: url("https://64.media.tumblr.com/bff245925ee537755c3c3b1f9a3f2a7f/tumblr_oq9smvbNLz1vsjcxvo1_540.gif");  
+}  
 </style>
+</head>
+<body>
+
+
+</body>
+</html>
 
 <h1 style="text-align: center;">&nbsp;<span style="color: white;"><u>Live</u> <u>and</u> <u>Pre-recorder</u></span></h1><h4 dir="rtl" style="margin-right: 40px; text-align: center;"><span style="color: #999999;"><i>NOTE-New classes will be Notify ass soon ass posible</i></span></h4><h4 dir="rtl" style="margin-right: 40px; text-align: center;"><span style="color: #999999;"><i>If you have a class? then click the "JOIN NOW" button <br /></i></span></h4><h4 dir="rtl" style="text-align: center;"><span style="color: white;">NO LIVE CLASSES AT THIS MOMENT</span></h4><h4 dir="rtl" style="text-align: center;"></h4><p dir="rtl" style="text-align: right;">
 <meta1 content="width=device-width, initial-scale=1" name="viewport"></meta1>
