--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 </head>
 <body>
 
-<a href="checking.html">
-<button class="button button3">CHECK PLUS ONE CLASS</button>
+<a href="online_class.html">
+<button class="button button3">CHECK FOR CLASSES</button>
 
 <!DOCTYPE html>
 <html>
