--- a/online_class.html
+++ b/online_class.html
@@ -1,9 +1,52 @@
+<p></p><h1 style="text-align: center;"><span style="color: white;">LIVE AND PRE-RECORD</span></h1><p><br /></p><p style="text-align: center;"><span style="color: #cccccc;"><b>NOTE- CHOOSING AN OPTION DOESN'T MEAN THAT YOUR CLASS IN LINE. IT NEED TO CHECK FOR ANY CLASSES THAT YOU HAVE</b></span></p><p style="text-align: center;"><span style="color: #cccccc;"><b>ALSO THAT, IF THE BUTTON IS IN <span style="color: #ea9999;">RED</span> COLOR THAT MEAN YOU DON'T HAVE CLASS... OR IF THE BUTTON IN <span style="color: #b6d7a8;">GREEN</span> COLOR THAT MEANS YOUR CLASS IS IN LINE</b></span><style>
+
+  .center_div {
+    border: 100px solid gray;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    background-color: #d0f0f6;
+    text-align: center;
+    padding: 8px;
+  }
+</style>
+
+<html>
+<head>
+<meta content="width=device-width, initial-scale=1" name="viewport"></meta>
+<style>
+.button {
+  background-color: blue; 
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 10px;
+  cursor: pointer;
+}
+
+
+.button3 {border-radius: 8px;}
+
+</style>
+</head>
 <body>
+  <br /><br />
 
 <a href="checking.html">
-<button class="button button3">CHECK PLUS ONE CLASS</button>
+<button class="button button3">OPEN PLUS ONE CLASS</button>
+  <br /><br />
+  <a href="#">
+<button class="button button3">OPEN PLUS TWO CLASS</button>
+  <br /><br />
+    <a href="#">
+<button class="button button3">UNDER DEVELOPMET</button>
+<br /><br />
+      
 
-<!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -16,112 +59,4 @@ body {
 
 
 </body>
-</html>
-
-<h1 style="text-align: center;">&nbsp;<span style="color: white;"><u>Live</u> <u>and</u> <u>Pre-recorder</u></span></h1><h4 dir="rtl" style="margin-right: 40px; text-align: center;"><span style="color: #999999;"><i>NOTE-New classes will be Notify ass soon ass posible</i></span></h4><h4 dir="rtl" style="margin-right: 40px; text-align: center;"><span style="color: #999999;"><i>If you have a class? then click the "JOIN NOW" button <br /></i></span></h4><h4 dir="rtl" style="text-align: center;"><span style="color: white;">NO LIVE CLASSES AT THIS MOMENT</span></h4><h4 dir="rtl" style="text-align: center;"></h4><p dir="rtl" style="text-align: right;">
-<meta1 content="width=device-width, initial-scale=1" name="viewport"></meta1>
-
-<!--Add icon library-->
-
-<link2 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"></link2>
-
-<style>
-
-.btn {
-
-  background-color: RED;
-
-  border: none;
-
-  color: white;
-
-  padding: 12px 45px:
-
-  cursor: pointer;
-
-  font-size: 35px;
-  
-
-}
-
-/* Darker background on mouse-over */
-
-.btn:hover {
-
-  background-color: grey;
-
-  color: white;
-
- 
-
-}
-  
-}
-  <h4>
-  color:black;
-  <h4>
-}
-  
-</style>
-
-
-
-<body>
-<br /><br /><br />
-<span style="color: white;"><i><b>THIS BUTTON WILL TURN INTO GREEN IN COLOR WHEN YOU'VE CLASS</b></i></span>
-  <br />
-<a download="" href="#">
-
-<button class="btn"> JOIN NOW </button>
-
-</a></body> <br /><br /></p><span><!--more--></span>
-
-<br /><span style="color: white;"><b><i>CLICK HERE</i> TO SEE THE PREVIOUS CLASSES</b></span><br />
-
-
-<link2 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"></link2>
-
-<style>
-
-.btn2 {
-
-  background-color: green;
-
-  border: none;
-
-  color: white;
-
-  padding: 12px 45px:
-
-  cursor: pointer;
-
-  font-size: 35px;
-  
-
-}
-
-/* Darker background on mouse-over */
-
-.btn2:hover {
-
-  background-color: grey;
-
-  color: white;
-
- 
-
-}
-  
-}
-  <h4>
-  color:black;
-  <h4>
-}
-  
-</style>
-
-<a download="" href="#">
-
-<button class="btn2"> OPEN THAT SECTION </button>
-</a>
-
+</html></a></a></a></body></html></p>
