--- a/online_class.html
+++ b/online_class.html
@@ -16,7 +16,7 @@
 <meta content="width=device-width, initial-scale=1" name="viewport"></meta>
 <style>
 .button {
-  background-color: blue; 
+  background-color: #ea9999; 
   border: none;
   color: white;
   padding: 20px;
@@ -31,6 +31,22 @@
 
 .button3 {border-radius: 8px;}
 
+.button1 {
+  background-color: #b6d7a8; 
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 10px;
+  cursor: pointer;
+}
+
+
+.button31 {border-radius: 8px;}
+
 </style>
 </head>
 <body>
@@ -40,7 +56,7 @@
 <button class="button button3">OPEN PLUS ONE CLASS</button>
   <br /><br />
   <a href="#">
-<button class="button button3">OPEN PLUS TWO CLASS</button>
+<button class="button1 button31">OPEN PLUS TWO CLASS</button>
   <br /><br />
     <a href="#">
 <button class="button button3">UNDER DEVELOPMET</button>
