--- a/online_class.html
+++ b/online_class.html
@@ -16,7 +16,7 @@
 <meta content="width=device-width, initial-scale=1" name="viewport"></meta>
 <style>
 .button {
-  background-color: #ea9999; 
+  background-color: RED; 
   border: none;
   color: white;
   padding: 20px;
@@ -32,7 +32,7 @@
 .button3 {border-radius: 8px;}
 
 .button1 {
-  background-color: #b6d7a8; 
+  background-color: RED; 
   border: none;
   color: white;
   padding: 20px;
