--- a/online_class.html
+++ b/online_class.html
@@ -55,10 +55,10 @@
 <a href="checking.html">
 <button class="button button3">OPEN PLUS ONE CLASS</button>
   <br /><br />
-  <a href="#">
+  <a href="erorr.justine">
 <button class="button1 button31">OPEN PLUS TWO CLASS</button>
   <br /><br />
-    <a href="#">
+    <a href="erorr.justine">
 <button class="button button3">UNDER DEVELOPMET</button>
 <br /><br />
       
