--- a/online_class.html
+++ b/online_class.html
@@ -52,13 +52,13 @@
 <body>
   <br /><br />
 
-<a href="checking.html">
+<a href="no_class.html">
 <button class="button button3">OPEN PLUS ONE CLASS</button>
   <br /><br />
-  <a href="erorr.justine">
+  <a href="erorr.html">
 <button class="button1 button31">OPEN PLUS TWO CLASS</button>
   <br /><br />
-    <a href="erorr.justine">
+    <a href="erorr.html">
 <button class="button button3">UNDER DEVELOPMET</button>
 <br /><br />
       
