--- a/erorr.html
+++ b/erorr.html
@@ -1,31 +1,10 @@
-<!DOCTYPE html>
+<h1 style="text-align: center;">OOPS AN ERROR OCCURRED <br /></h1><br /><div><div>&nbsp;</div><div><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><h2 style="text-align: center;"><span style="background-color: #01ffff;"><b><span style="color: black;"><a href="http://online_class.html">EXIT</a></span></b></span></h2></div></div>
+
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body, html {
-  height: 100%;
-  margin: 0;
-}
-
-.bg {
-  /* The image used */
-  background-image: url("https://img.freepik.com/free-vector/tiny-people-examining-operating-system-error-warning-web-page-isolated-flat-illustration_74855-11104.jpg");
-
-  /* Full height */
-  height: 100%; 
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+body {
+  background-image: url("https://64.media.tumblr.com/bff245925ee537755c3c3b1f9a3f2a7f/tumblr_oq9smvbNLz1vsjcxvo1_540.gif");  
+}  
 </style>
 </head>
-<body>
-
-<div class="bg"></div>
-
-
-</body>
-</html>
