--- a/erorr.html
+++ b/erorr.html
@@ -1,4 +1,4 @@
-<h1 style="text-align: center;">OOPS AN ERROR OCCURRED <br /></h1><br /><div><div>&nbsp;</div><div><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><h2 style="text-align: center;"><span style="background-color: #01ffff;"><b><span style="color: black;"><a href="http://online_class.html">EXIT</a></span></b></span></h2></div></div>
+<h1 style="text-align: center;"><span style="color: white;">OOPS AN ERROR OCCURRED</span><br /></h1><br /><div><div>&nbsp;</div><div><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><h2 style="text-align: center;"><span style="background-color: #01ffff;"><b><span style="color: black;"><a href="online_class.html">EXIT</a></span></b></span></h2></div></div>
 
 <html>
 <head>
@@ -7,4 +7,4 @@ body {
   background-image: url("https://64.media.tumblr.com/bff245925ee537755c3c3b1f9a3f2a7f/tumblr_oq9smvbNLz1vsjcxvo1_540.gif");  
 }  
 </style>
-</head>
+</head></html>
