--- a/erorr.html
+++ b/erorr.html
@@ -4,7 +4,7 @@
 <head>
 <style>
 body {
-  background-image: url("https://64.media.tumblr.com/bff245925ee537755c3c3b1f9a3f2a7f/tumblr_oq9smvbNLz1vsjcxvo1_540.gif");  
+  background-image: url("https://cdn.dribbble.com/users/1939393/screenshots/6392286/dribbble-404-error.gif");  
 }  
 </style>
 </head></html>
