--- a/erorr.html
+++ b/erorr.html
@@ -1,10 +1,10 @@
-<h1 style="text-align: center;"><span style="color: white;">OOPS AN ERROR OCCURRED</span><br /></h1><br /><div><div>&nbsp;</div><div><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><h2 style="text-align: center;"><span style="background-color: #01ffff;"><b><span style="color: black;"><a href="online_class.html">EXIT</a></span></b></span></h2></div></div>
+<h1 style="text-align: center;"><span style="color: white;">OOPS AN ERROR OCCURRED</span><br /></h1><br /><div><div>&nbsp;<b><span style="color: #cccccc;">NOTE- MAY THIS IS STILL UNDER DEVELOPMENT OR THIS IS NOT AVAILABLE RIGHT NOW. CLICK THE EXIT TO BACK </span></b><br /></div><div><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><h2 style="text-align: center;"><span style="background-color: #01ffff;"><b><span style="color: black;"><a href="online_class.html">EXIT</a></span></b></span></h2></div></div>
 
 <html>
 <head>
 <style>
 body {
-  background-image: url("https://cdn.dribbble.com/users/1939393/screenshots/6392286/dribbble-404-error.gif");  
+  background-image: url("https://cdn.dribbble.com/users/718859/screenshots/3272116/jisunpark-500-error.gif");  
 }  
 </style>
 </head></html>
