--- a/erorr.html
+++ b/erorr.html
@@ -1,4 +1,60 @@
-<h1 style="text-align: center;"><span style="color: white;">OOPS AN ERROR OCCURRED</span><br /></h1><br /><div><div>&nbsp;<b><span style="color: #cccccc;">NOTE- MAY THIS IS STILL UNDER DEVELOPMENT OR THIS IS NOT AVAILABLE RIGHT NOW. CLICK THE EXIT TO BACK </span></b><br /></div><div><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><h2 style="text-align: center;"><span style="background-color: #01ffff;"><b><span style="color: black;"><a href="online_class.html">EXIT</a></span></b></span></h2></div></div>
+<p></p><h1 style="text-align: center;"><span style="color: white;">OOPS AN ERROR OCCURRED</span></h1><p><br /></p><p style="text-align: center;"><span style="color: #cccccc;"><b>NOTE- MAY THIS IS STILL UNDER DEVELOPMENT OR THIS IS NOT AVAILABLE RIGHT NOW. CLICK THE EXIT TO BACK</b></span></p><p style="text-align: center;"><span style="color: #cccccc;"><b> <span style="color: #ea9999;"></span>  <span style="color: #b6d7a8;"></span> </b></span><style>
+
+  .center_div {
+    border: 100px solid gray;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    background-color: #d0f0f6;
+    text-align: center;
+    padding: 8px;
+  }
+</style>
+
+<html>
+<head>
+<meta content="width=device-width, initial-scale=1" name="viewport"></meta>
+<style>
+.button {
+  background-color: RED; 
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 10px;
+  cursor: pointer;
+}
+
+
+.button3 {border-radius: 8px;}
+
+.button1 {
+  background-color: RED; 
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 10px;
+  cursor: pointer;
+}
+
+
+.button31 {border-radius: 8px;}
+
+</style>
+</head>
+<body>
+  <br /><br />
+
+<a href="online_class.html">
+<button class="button button3">EXIT</button>
+  <br /><br />
 
 <html>
 <head>
@@ -7,4 +63,9 @@ body {
   background-image: url("https://64.media.tumblr.com/bff245925ee537755c3c3b1f9a3f2a7f/tumblr_oq9smvbNLz1vsjcxvo1_540.gif");  
 }  
 </style>
-</head></html>
+</head>
+<body>
+
+
+</body>
+</html></a></a></a></body></html></p>
