--- a/erorr.html
+++ b/erorr.html
@@ -68,4 +68,11 @@ body {
 
 
 </body>
-</html></a></a></a></body></html></p>
+
+<!DOCTYPE html>
+<html>
+   
+   <body>
+      <bgsound src = "https://i.imgur.com/f4qkMsb.mp4"/>
+   </body>
+</html>
