--- a/erorr.html
+++ b/erorr.html
@@ -1,5 +1,3 @@
-<audio src="https://c.top4top.io/m_2247vut3c9.mp3" autoplay controls> </audio>
-
 <p></p><h1 style="text-align: center;"><span style="color: white;">OOPS AN ERROR OCCURRED</span></h1><p><br /></p><p style="text-align: center;"><span style="color: #cccccc;"><b>NOTE- MAY THIS IS STILL UNDER DEVELOPMENT OR THIS IS NOT AVAILABLE RIGHT NOW. CLICK THE EXIT TO BACK</b></span></p><p style="text-align: center;"><span style="color: #cccccc;"><b> <span style="color: #ea9999;"></span>  <span style="color: #b6d7a8;"></span> </b></span><style>
 
   .center_div {
@@ -75,6 +73,6 @@ body {
 <html>
    
    <body>
-      <bgsound src = "https://i.imgur.com/f4qkMsb.mp4"/>
+      <bgsound src = "https://c.top4top.io/m_2247vut3c9.mp3"/>
    </body>
 </html>
