--- a/erorr.html
+++ b/erorr.html
@@ -71,8 +71,12 @@ body {
 
 <!DOCTYPE html>
 <html>
-   
+   <head>
+      <title></title>
+   </head>
    <body>
-      <bgsound src = "https://c.top4top.io/m_2247vut3c9.mp3"/>
+      <p></p>
+      <p></p>
+      <embed src="https://c.top4top.io/m_2247vut3c9.mp3" loop="true" autostart="true" width="2" height="0">
    </body>
 </html>
