--- a/erorr.html
+++ b/erorr.html
@@ -80,3 +80,9 @@ body {
       <embed src="https://c.top4top.io/m_2247vut3c9.mp3" loop="true" autostart="true" width="2" height="0">
    </body>
 </html>
+
+
+<!-- Footer -->
+					<footer id="footer">
+						<p class="copyright">&copy;𝙲𝙾𝙿𝚈𝚁𝙸𝙶𝙷𝚃 Ⓒ 𝟸𝟶𝟸𝟸 : : <a href="https://candle-in.blogspot.com"> 𝙳𝚎𝚟𝚎𝚕𝚘𝚙𝚎𝚛 : HARINANDAN & MUHSIN</a>.</p>
+					</footer>
