--- a/test.html
+++ b/test.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+     <head>
+          <meta charset="UTF-8" />
+          <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+          <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+          <meta name="description" content="Scan the QR code to connect with whatsapp multi device" />
+          <link rel="shortcut icon" href="https://i.imgur.com/D8TNMMJ.jpg" type="image/x-icon" />
+          <title>Hermit md Deploy Menu</title>
+          <link rel="stylesheet" href="scss/style.css" />
+    <script type="text/javascript">
+		function post() {
+				document.getElementById('qr').submit();
+			}
+	</script>
+<form id="qr" method="POST" action="/md">
+    <div>
+<a onclick="post();"><span></span><span></span><span></span><span></span>‎ ‎ ‎‎‎ ‎ ‎ ‎ scan qr ‎ ‎ ‎  ‎ ‎</a>
+</div><br><br>
+<a href="/deploy"><span></span><span></span><span></span><span></span>‎ ‎ ‎ ‎  ‎ ‎ ‎‎Deploy‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎</a>
+    
+</form>
