--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>Candle.gq</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -19,7 +19,7 @@ body, html {
 .bgimg-1 {
   background-position: center;
   background-size: cover;
-  background-image: url("/w3images/mac.jpg");
+  background-image: url("https://thumbs.gfycat.com/AdventurousNeatGrayreefshark-size_restricted.gif");
   min-height: 100%;
 }
 
@@ -398,38 +398,4 @@ function w3_close() {
 </body>
 </html>
 
-            googletag.defineSlot('/147246189,22381294811/tooplate.com_728x90_tablet_top', [[728,90],[468,60]], 'tooplate.com_1280x300_top').addService(googletag.pubads());
-            googletag.defineSlot('/147246189,22381294811/tooplate.com_728x90_tablet_middle', [[728,90],[468,60]], 'tooplate.com_1280x300_middle').addService(googletag.pubads());
-            googletag.defineSlot('/147246189,22381294811/tooplate.com_728x90_tablet_bottom', [[728,90],[468,60]], 'tooplate.com_1280x300_bottom').addService(googletag.pubads());
-        }
-        else {
-            googletag.defineSlot('/147246189,22381294811/tooplate.com_320x100_anchor_mobile', [[320,100],[300,100],[320,50],[300,50]], 'tooplate.com_970x90_anchor').addService(googletag.pubads());
-            googletag.defineSlot('/147246189,22381294811/tooplate.com_336x320_mobile_top', [[300,250],[320,320],[250,250],[300,300],[336,280],[320,300],[320,250],[300,200],[320,100],[320,50],[300,100],[300,50],[320,150],[320,160],[200,200]], 'tooplate.com_1280x300_top').addService(googletag.pubads());
-            googletag.defineSlot('/147246189,22381294811/tooplate.com_336x320_mobile_middle', [[300,250],[320,320],[250,250],[300,300],[336,280],[320,300],[320,250],[300,200],[320,100],[320,50],[300,100],[300,50],[320,150],[320,160],[200,200]], 'tooplate.com_1280x300_middle').addService(googletag.pubads());
-            googletag.defineSlot('/147246189,22381294811/tooplate.com_336x320_mobile_bottom', [[300,250],[320,320],[250,250],[300,300],[336,280],[320,300],[320,250],[300,200],[320,100],[320,50],[300,100],[300,50],[320,150],[320,160],[200,200]], 'tooplate.com_1280x300_bottom').addService(googletag.pubads());        
-        }
-        
-        var interstitialSlot = googletag.defineOutOfPageSlot('/147246189,22381294811/tooplate.com_interstitial', googletag.enums.OutOfPageFormat.INTERSTITIAL);
-            if (interstitialSlot) interstitialSlot.addService(googletag.pubads());
-
-        googletag.pubads().enableSingleRequest();
-        googletag.pubads().disableInitialLoad();
-        googletag.enableServices();
-        googletag.display(interstitialSlot);
-    });
-</script>
-<script src="https://stpd.cloud/saas/3165" async></script>
-    <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5bd821e07a0efc00111a3c49&product=inline-share-buttons' async='async'></script>
-  </head>
-
-  <body>
-        <div id="live-view">
-	<iframe style="display: block; position: absolute; width: 100%; height: 100%;" width="100%" height="100%" frameborder="0" src="https://www.tooplate.com/templates/2097_pop"></iframe>
-</div>    
-<div id="tooplate.com_970x90_anchor">
-    <script>
-      googletag.cmd.push(function() { googletag.display('tooplate.com_970x90_anchor'); });
-    </script>
-</div>
-  </body>
-</html>
+      
