--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@ body, html {
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEibQGz5YEpT3WTqQrpfAnWPtQ5rgWwLb5qcV2oFnjOdqBOfVvIP7lSfOh4OhKTDl5N2gl7drUc4ligCggvAWVhEZMZVGp43_eVHJlU4sFhRNq5TDcbPMXOznrHjaa1dFeg_nnhmY1ZM5-ie4IS_wDjWmn-fp_oqU5t7kzhFTJMbHFM43TEwHJGFoSKz0A/s960/IMG-20220811-WA0042.jpg" alt="Mr. Dhaneesh" style="width:100%">
         <div class="w3-container">
-          <h3>John Doe</h3>
-          <p class="w3-opacity">CEO & Founder</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          <h3>Mr. Dhaneesh</h3>
+          <p class="w3-opacity">Zoology Faculty</p>
+          <p>MSc, BEd,M.Phil<br />6+ year Experience<br /></p>
+          <a href="url"><p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p></a>
         </div>
       </div>
     </div>
