--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ body, html {
 <div class="w3-container" style="padding:128px 16px" id="team">
   <h3 class="w3-center">THE TEAM</h3>
   <p class="w3-center w3-large">The ones who runs this company</p>
-  <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
+  <div class="w3-row-padding " style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
         <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEibQGz5YEpT3WTqQrpfAnWPtQ5rgWwLb5qcV2oFnjOdqBOfVvIP7lSfOh4OhKTDl5N2gl7drUc4ligCggvAWVhEZMZVGp43_eVHJlU4sFhRNq5TDcbPMXOznrHjaa1dFeg_nnhmY1ZM5-ie4IS_wDjWmn-fp_oqU5t7kzhFTJMbHFM43TEwHJGFoSKz0A/s960/IMG-20220811-WA0042.jpg" alt="Mr. Dhaneesh" style="width:100%">
